src/test/ui/parser/issue-68091-unicode-ident-after-if.stderr
error: missing condition for `if` expression
  --> $DIR/issue-68091-unicode-ident-after-if.rs:3:14
   |
LL |         $($c)รถ* {}
   |              ^ expected if condition here

error[E0308]: mismatched types
  --> $DIR/issue-68091-unicode-ident-after-if.rs:3:17
   |
LL |         $($c)รถ* {}
   |                 ^^ expected `bool`, found `()`
...
LL |     x!(if);
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `x` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
